<resources>
    <string name="app_name">SynapsisTest</string>
    <string name="str_sign_to_continue">Please Sign in to Continue</string>
    <string name="str_sign">SignIn</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_error_login">Username atau Password tidak di temukan</string>

    <string name="str_dont_have_account">Dont have account? <font color='#1976D2'><u>Signup</u></font></string>
    <string name="str_already_have_account">Already have account? <font color='#1976D2'><u>Signin</u></font></string>
    <string name="str_signup">SignUp</string>
    <string name="str_lat_long">Latitude : %s Longitude : %s</string>
    <string name="str_failed_permission_location">Please Allow access location for get Latitude and Longitude</string>
    <string name="str_failed_permission_location_and_network">Please Allow access location or Network for get Latitude and Longitude</string>
    <string name="str_battery_level">Battery Level: %s%%</string>
    <string name="str_navigate_to_page_b">Navigate To Page B</string>
    <string name="str_navigate_to_page_c">Navigate To Page C</string>
    <string name="str_accelerometer">Click To Play Accelerometer</string>
    <string name="str_gyroscope">Click To Play Gyroscope</string>
    <string name="str_magnetometer">Click To Play Magnetometer</string>
    <string name="str_x_y_z">X %s \nY %s \nZ %s</string>

    <string name="str_manufacture">Manufacture : %s</string>
    <string name="str_model">Model : %s</string>
    <string name="str_build">Build : %s</string>
    <string name="str_sdk">Sdk : %s</string>
    <string name="str_version_code">VersionCode : %s</string>
</resources>